--- a/mastodon-chart/templates/onepassworditems.yaml
+++ b/mastodon-chart/templates/onepassworditems.yaml
@@ -9,6 +9,9 @@ metadata:
   {{- else }}
   name: {{ .name }}
   {{- end }}
+  {{- if .namespace }}
+  namespace: {{ .namespace }}
+  {{- end }}
 spec:
   itemPath: {{ .itemPath }}
 {{- end }}
