--- a/mastodon-chart/templates/deployment-web-primary-only.yaml
+++ b/mastodon-chart/templates/deployment-web-primary-only.yaml
@@ -5,7 +5,7 @@ kind: Deployment
 metadata:
   labels:
     {{- include "mastodon.labels" . | nindent 4 }}
-    app: {{ include "mastodon.fullname" . }}-web
+    app: {{ include "mastodon.fullname" . }}
     version: {{ .Chart.AppVersion | quote }}
   name: {{ include "mastodon.fullname" . }}-web-primary-db
 spec:
@@ -14,6 +14,8 @@ spec:
     matchLabels:
       {{- include "mastodon.selectorLabels" . | nindent 6 }}
       app.kubernetes.io/component: web-primary-db-only
+      app: {{ include "mastodon.fullname" . }}
+      version: {{ .Chart.AppVersion | quote }}
   strategy:
     {{- toYaml .Values.web.strategy | nindent 4 }}
   template:
@@ -25,6 +27,8 @@ spec:
       labels:
         {{- include "mastodon.selectorLabels" . | nindent 8 }}
         app.kubernetes.io/component: web-primary-db-only
+        app: {{ include "mastodon.fullname" . }}
+        version: {{ .Chart.AppVersion | quote }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
