--- a/mastodon-chart/values.test.yaml
+++ b/mastodon-chart/values.test.yaml
@@ -81,6 +81,7 @@ jobs:
 onePassword:
   - name: cf-origin-certificate-tls
     itemPath: vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/hpm4njgmdollluy5b4isc2zpgq
+    namespace: istio-ingress
   - suffix: secrets-env
     itemPath: vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/kvd2a5lukn6ksm6ybkdv23zhaa
 
