disable the database read-only node as peak appears to be over again

--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -35,7 +35,7 @@ configuration:
     sslmode: require
     user: mastodon
   databaseReplicas:
-    enabled: true
+    enabled: false
     hosts:
       - private-db-ro-postgresql-ams3-toot-community-01-do-user-924064.b.db.ondigitalocean.com
   defaultLocale: en
@@ -96,7 +96,7 @@ web:
   # the primary db deployment will capture all /oauth & verify credential requests to workaround
   # any race conditions during db replication
   primaryDatabaseDeployment:
-    enabled: true
+    enabled: false
     replicaCount: 2
     resources:
       requests:
