add ES_PASS and ES_USER vars to deployment

--- a/elasticsearch/elasticsearch.yaml
+++ b/elasticsearch/elasticsearch.yaml
@@ -1,8 +1,8 @@
 apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
 metadata:
-  name: tootcommunity
-  namespace: elastic-stack
+  name: fts
+  namespace: tootcommunity
 spec:
   version: 8.5.3
   nodeSets:
