--- a/mastodon-chart/templates/deployment-sidekiq.yaml
+++ b/mastodon-chart/templates/deployment-sidekiq.yaml
@@ -48,6 +48,13 @@ spec:
           env:
             - name: DB_POOL
               value: {{ .concurrency | quote }}
+            {{- if .Values.fullTextSearch.enabled }}
+            - name: ES_PASS
+              valueFrom:
+                secretKeyRef:
+                  key: {{ .Values.fullTextSearch.secretRef.key }}
+                  name: {{ .Values.fullTextSearch.secretRef.name }}
+            {{- end }}
           envFrom:
             - configMapRef:
                 name: {{ include "mastodon.fullname" $context }}-env
