--- a/elasticsearch/kibana.yaml
+++ b/elasticsearch/kibana.yaml
@@ -1,10 +1,10 @@
 apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
 metadata:
-  name: tootcommunity
-  namespace: elastic-stack
+  name: fts
+  namespace: tootcommunity
 spec:
   version: 8.5.3
   count: 1
   elasticsearchRef:
-    name: tootcommunity
+    name: fts
