--- a/mastodon-chart/templates/keda-web.yaml
+++ b/mastodon-chart/templates/keda-web.yaml
@@ -26,10 +26,14 @@ spec:
         query: sum(rate(nginx_ingress_controller_requests{service="{{ include "mastodon.fullname" . }}-web"}[1m]))
         threshold: {{ .Values.keda.web.threshold | quote }}
         ignoreNullValues: {{ .Values.keda.web.ignoreNullValues | quote }}
+    {{- if .Values.keda.web.memoryUtilizationScaling }}
+    {{- if .Values.keda.web.memoryUtilizationScaling.enabled }}
     - type: memory
       metricType: Utilization
       metadata:
-        value: "100"
+        value: {{ .Values.keda.web.memoryUtilizationScaling.value | quote }}
+    {{- end }}
+    {{- end }}
   advanced:
     {{- if .Values.keda.web.advanced }}
     {{- toYaml .Values.keda.web.advanced | nindent 4 }}
