--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -291,6 +291,9 @@ keda:
                 periodSeconds: 60
           scaleUp:
             stabilizationWindowSeconds: 60
+    memoryUtilizationScaling:
+      enabled: true
+      targetAverageUtilization: 150
   workers:
     enabled: true
     cooldownPeriod: 300
