disable content cleanup in face of the running migration

--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -211,7 +211,7 @@ ingress:
 jobs:
   annotations: {}
   cleanupMedia:
-    enabled: true
+    enabled: false
     schedule: "0 5 * * *"
     days: 7
     resources:
