--- a/argocd/applications/prometheus.yaml
+++ b/argocd/applications/prometheus.yaml
@@ -17,7 +17,7 @@ spec:
       values: |
         serviceAccounts:
           alertmanager:
-            create: false
+            create: true
           nodeExporter:
             create: true
           pushgateway:
@@ -26,18 +26,19 @@ spec:
             create: true
         alertmanager:
           enabled: true
-          receivers:
-          - name: 'robusta'
-            webhook_configs:
-              - url: 'http://robusta-runner.robusta.svc.cluster.local/api/alerts'
-                send_resolved: true
-          route:
-            routes:
-            - receiver: 'robusta'
-              match_re:
-                severity: 'info|warn|error|critical'
-              repeat_interval: 4h
-              continue: true
+          config:
+            receivers:
+              - name: 'default-receiver'
+                webhook_configs:
+                  - url: 'http://robusta-runner.robusta.svc.cluster.local/api/alerts'
+                    send_resolved: true
+            route:
+              routes:
+              - receiver: 'default-receiver'
+                match_re:
+                  severity: 'info|warn|error|critical'
+                repeat_interval: 4h
+                continue: true
         configmapReload:
           prometheus:
             enabled: true
