removes local libretranslate and moves to the one offered by universeodon.com

--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -109,8 +109,7 @@ statistics:
 
 translations:
   enabled: true
-  privateAddressRange: 10.245.0.0/16
-  endpoint: http://translate.libretranslate.svc.cluster.local
+  endpoint: https://translate.universeodon.com
 
 streaming:
   replicaCount: 3
