--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -17,7 +17,7 @@ resources:
   - applications/metrics-server.yaml
   - applications/prometheus-statsd-exporter.yaml
   - applications/argocd.yaml
-  - applications/libretranslate.yaml
+#  - applications/libretranslate.yaml
   - applications/redis.yaml
   - applications/velero.yaml
   - applications/relay.yaml
