direct the db migrations to the server directly, bypassing the pooler

--- a/mastodon-chart/templates/job-db-migrate.yaml
+++ b/mastodon-chart/templates/job-db-migrate.yaml
@@ -28,6 +28,8 @@ spec:
             - rake
             - db:migrate
           env:
+            - name: DB_HOST
+              value: {{ .Values.configuration.database.hostWithoutPooler }}
             - name: PORT
               value: "3000"
             - name: DB_USER
