activate pruning of accounts every monday at 2am

--- a/mastodon-chart/templates/cronjob-accounts-prune.yaml
+++ b/mastodon-chart/templates/cronjob-accounts-prune.yaml
@@ -25,7 +25,7 @@ spec:
               command:
                 - bash
                 - -c
-                - "bin/tootctl accounts prune
+                - "bin/tootctl accounts prune"
               envFrom:
                 - configMapRef:
                     name: {{ include "mastodon.fullname" . }}-env
