tmp disable ssl for streaming for later fix

--- a/mastodon-chart/templates/deployment-streaming.yaml
+++ b/mastodon-chart/templates/deployment-streaming.yaml
@@ -54,6 +54,8 @@ spec:
                   name: {{ include "mastodon.fullname" . }}-secrets-env
             - name: PORT
               value: "4000"
+            - name: DB_SSLMODE
+              value: "disable"
           envFrom:
             - configMapRef:
                 name: {{ include "mastodon.fullname" . }}-env
