upgrade the relay

--- a/asonix-chart/values.yaml
+++ b/asonix-chart/values.yaml
@@ -47,8 +47,10 @@ ingress:
 
 resources:
   requests:
-    cpu: 50m
-    memory: 150Mi
+    cpu: 250m
+    memory: 350Mi
+  limits:
+    memory: 350Mi
 
 nodeSelector: {}
 
