--- a/asonix-chart/templates/deployment.yaml
+++ b/asonix-chart/templates/deployment.yaml
@@ -45,11 +45,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /healthz
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: /healthz
               port: http
           envFrom:
             - configMapRef:
