fix the preview remove card job

--- a/mastodon-chart/templates/cronjob-cleanup-preview-cards.yaml
+++ b/mastodon-chart/templates/cronjob-cleanup-preview-cards.yaml
@@ -26,6 +26,17 @@ spec:
                 - bash
                 - -c
                 - "bin/tootctl preview_cards remove --days={{ .Values.jobs.removePreviewCards.days }}"
+              env:
+                - name: DB_USER
+                  valueFrom:
+                    secretKeyRef:
+                      key: {{ .Values.configuration.database.credentialSecret.usernameKey }}
+                      name: {{ .Values.configuration.database.credentialSecret.name }}
+                - name: DB_PASS
+                  valueFrom:
+                    secretKeyRef:
+                      key: {{ .Values.configuration.database.credentialSecret.passwordKey }}
+                      name: {{ .Values.configuration.database.credentialSecret.name }}
               envFrom:
                 - configMapRef:
                     name: {{ include "mastodon.fullname" . }}-env
