--- a/mastodon-chart/templates/deployment-web.yaml
+++ b/mastodon-chart/templates/deployment-web.yaml
@@ -47,6 +47,13 @@ spec:
                 secretKeyRef:
                   key: {{ .Values.configuration.database.credentialSecret.passwordKey }}
                   name: {{ .Values.configuration.database.credentialSecret.name }}
+            {{- if .Values.configuration.redis.separateCache.enabled | default false }}
+            - name: CACHE_REDIS_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: {{ .Values.configuration.redis.separateCache.authSecretKey }}
+                  name: {{ .Values.configuration.redis.separateCache.authSecretName }}
+            {{- end }}
           envFrom:
             - configMapRef:
                 name: {{ include "mastodon.fullname" . }}-env
