--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -50,7 +50,7 @@ configuration:
     port: 6379
     database: 0
     separateCache:
-      enabled: true
+      enabled: false
       host: tootcommunity-cache-redis-master
       port: 6379
       authSecretName: tootcommunity-cache-creds
