adds labels to jobs for connecting to redis

--- a/mastodon-chart/templates/cronjob-cleanup-media-from-profiles.yaml
+++ b/mastodon-chart/templates/cronjob-cleanup-media-from-profiles.yaml
@@ -16,6 +16,8 @@ spec:
           annotations:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          labels:
+            {{- include "mastodon.labels" . | nindent 12 }}
         spec:
           restartPolicy: OnFailure
           containers:
