--- a/mastodon-chart/templates/cronjob-cleanup-media.yaml
+++ b/mastodon-chart/templates/cronjob-cleanup-media.yaml
@@ -44,6 +44,13 @@ spec:
                     secretKeyRef:
                       key: {{ .Values.configuration.database.credentialSecret.passwordKey }}
                       name: {{ .Values.configuration.database.credentialSecret.name }}
+                {{- if .Values.configuration.redis.separateCache.enabled | default false }}
+                - name: CACHE_REDIS_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      key: {{ .Values.configuration.redis.separateCache.authSecretKey }}
+                      name: {{ .Values.configuration.redis.separateCache.authSecretName }}
+                {{- end }}
               resources:
                 {{- toYaml .Values.jobs.cleanupMedia.resources | nindent 16 }}
 {{ end }}
