--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - https://github.com/argoproj/argo-cd/manifests/cluster-install?ref=v2.6.3
+  - https://github.com/argoproj/argo-cd/manifests/cluster-install?ref=v2.6.5
   - ingress/argocd-server-http-ingress.yaml
   - projects/mastodon.yaml
   - projects/infrastructure.yaml
@@ -17,11 +17,11 @@ resources:
   - applications/metrics-server.yaml
   - applications/prometheus-statsd-exporter.yaml
   - applications/argocd.yaml
-#  - applications/libretranslate.yaml
   - applications/redis.yaml
   - applications/velero.yaml
   - applications/relay.yaml
   - applications/backup-policy.yaml
+  - applications/cnpg.yaml
 
   # this line below is enabled because toot.community uses 1Password to provision secrets to the Kubernetes cluster,
   # it's fine if you don't, but then remove this line & the corresponding file.
