--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
   - applications/velero.yaml
   - applications/relay.yaml
   - applications/backup-policy.yaml
+  - applications/redis-cache.yaml
   - applications/cnpg.yaml
 
   # this line below is enabled because toot.community uses 1Password to provision secrets to the Kubernetes cluster,
