--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
   - applications/relay.yaml
   - applications/backup-policy.yaml
   - applications/redis-cache.yaml
+  - applications/tootcommunity-db.yaml
   - applications/cnpg.yaml
 
   # this line below is enabled because toot.community uses 1Password to provision secrets to the Kubernetes cluster,
