re-enable db migrations on upgrade

--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -38,7 +38,7 @@ configuration:
       name: tootcommunity-db-app
       usernameKey: username
       passwordKey: password
-    runDatabaseMigrations: false
+    runDatabaseMigrations: true
   databaseReplicas:
     enabled: false
     hosts:
