add s3 secret for log storage

--- a/argocd/configuration/1p-secrets.yaml
+++ b/argocd/configuration/1p-secrets.yaml
@@ -45,3 +45,15 @@ metadata:
   namespace: monitoring
 spec:
   itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/ex265wbjm3b5oibxudfwhgr474"
+---
+# Creates a secret with the name: loki-access-s3
+# Contents:
+# - key: <content>
+# - secret-key: <content>
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: loki-access-s3
+  namespace: loki
+spec:
+  itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/ex265wbjm3b5oibxudfwhgr474"
