--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -23,6 +23,8 @@ resources:
   - applications/redis-cache.yaml
   - applications/tootcommunity-db.yaml
   - applications/cnpg.yaml
+  - applications/loki.yaml
+  - applications/promtail.yaml
 
   # this line below is enabled because toot.community uses 1Password to provision secrets to the Kubernetes cluster,
   # it's fine if you don't, but then remove this line & the corresponding file.
