--- a/argocd/applications/metrics-server.yaml
+++ b/argocd/applications/metrics-server.yaml
@@ -11,6 +11,7 @@ spec:
   syncPolicy:
     automated:
       selfHeal: true
+      prune: true
   source:
     chart: metrics-server
     repoURL: https://kubernetes-sigs.github.io/metrics-server/
