--- a/databases/postgres/db.yaml
+++ b/databases/postgres/db.yaml
@@ -27,28 +27,27 @@ spec:
   postgresql:
     parameters:
       # https://pgtune.leopard.in.ua
-      shared_buffers: "1GB"
-      max_connections: "300"
-      effective_cache_size: "3GB"
-      maintenance_work_mem: "256MB"
+      shared_buffers: "1280MB"
+      max_connections: "200"
+      effective_cache_size: "3840MB"
+      maintenance_work_mem: "320MB"
       checkpoint_completion_target: "0.9"
       wal_buffers: "16MB"
       default_statistics_target: "100"
       random_page_cost: "1.1"
       effective_io_concurrency: "200"
-      work_mem: "1747kB"
-      min_wal_size: "2GB"
-      max_wal_size: "8GB"
+      work_mem: "3276kB"
+      min_wal_size: "1GB"
+      max_wal_size: "4GB"
       # https://cloudnative-pg.io/documentation/1.18/postgresql_conf/#enabling-pg_stat_statements
       pg_stat_statements.max: "10000"
       pg_stat_statements.track: all
 
   resources:
     requests:
-      memory: "4Gi"
-      cpu: '2'
+      memory: "5Gi"
     limits:
-      memory: "4Gi"
+      memory: "5Gi"
 
   backup:
     barmanObjectStore:
