--- a/databases/postgres/db.yaml
+++ b/databases/postgres/db.yaml
@@ -27,6 +27,12 @@ spec:
   postgresql:
     parameters:
       # https://pgtune.leopard.in.ua
+      # DB Version: 14
+      # OS Type: linux
+      # DB Type: web
+      # Total Memory (RAM): 5 GB
+      # CPUs num: 4
+      # Data Storage: ssd
       shared_buffers: "1280MB"
       max_connections: "200"
       effective_cache_size: "3840MB"
