--- a/argocd/configuration/1p-secrets.yaml
+++ b/argocd/configuration/1p-secrets.yaml
@@ -18,6 +18,18 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: cf-origin-certificate-tls
+  namespace: monitoring-stack
+spec:
+  itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/hpm4njgmdollluy5b4isc2zpgq"
+---
+# Creates a secret with the name: 1p-cf-origin-certificate-tls
+# Contents:
+# - tls.crt: <content>
+# - tls.key: <content>
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: cf-origin-certificate-tls
   namespace: argocd
 spec:
   itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/hpm4njgmdollluy5b4isc2zpgq"
@@ -34,7 +46,7 @@ metadata:
 spec:
   itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/hpm4njgmdollluy5b4isc2zpgq"
 ---
-# Creates a secret with the name: 1p-cf-origin-certificate-tls
+# Creates a secret with the name: grafana-auth-oauth-secret
 # Contents:
 # - client_id: <content>
 # - client_secret: <content>
@@ -43,6 +55,18 @@ kind: OnePasswordItem
 metadata:
   name: grafana-auth-oauth-secret
   namespace: monitoring
+spec:
+  itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/ex265wbjm3b5oibxudfwhgr474"
+---
+# Creates a secret with the name: grafana-auth-oauth-secret
+# Contents:
+# - client_id: <content>
+# - client_secret: <content>
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: grafana-auth-oauth-secret
+  namespace: monitoring-stack
 spec:
   itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/ex265wbjm3b5oibxudfwhgr474"
 ---
